MDEV-18183 Server startup fails while dropping garbage encrypted tablespace

- There is no need to wait for crypt thread to stop accessing space while
dropping the garbage encrypted tablespace during recover.